# hw06-ingridchien

./: .buildinfo  Makefile  README.md  environment.yml  genindex.html  index.html  index.ipynb  postBuild  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
ligobook/: _config.yml  conf.py  requirements.txt
ligobook/.github/workflow/: deploy.yml
ligobook/_build/html/: .buildinfo  genindex.html  index.html  intro.html  markdown.html  notebooks.html  search.html  searchindex.js
ligobook/_build/html/.doctrees/: environment.pickle  index.doctree  intro.doctree  markdown.doctree  notebooks.doctree
ligobook/_build/html/_sources/: index.ipynb
ligobook/_build/jupyter_execute/: index.ipynb  index.py  notebooks.ipynb
ligotools/: readligo.py  utils.py
ligotools/tests/: test_readligo.py  tests_readligo.py
