[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Ingrid Chien
author_email     = ingrid070401@berkeley.edu
description      = A package that reads LIGO data. 
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3.6,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
    ligotools.tests*